cluster/config/uptime-kuma/uptime-kuma.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  annotations:
    app: uptime-kuma
  labels:
    app: uptime-kuma
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - image: louislam/uptime-kuma:latest
        livenessProbe:
          exec:
            command:
            - node
            - extra/healthcheck.js
          initialDelaySeconds: 180
          periodSeconds: 60
          timeoutSeconds: 30
        name: uptime-kuma
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
        volumeMounts:
        - mountPath: /app/data
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: uptime-kuma
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.kube.home/oauth2/start?rd=https://$host$uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.kube.home/oauth2/auth
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_cache_bypass $http_upgrade;
      }
  labels:
    app: uptime-kuma
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  rules:
  - host: uptime.kube.home
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
        path: /
        pathType: Prefix
